# quotesbot

./: pyproject.toml  requirements.txt
.github/workflows/: send_email.yml
bot/: main.py
